Remove reference to an element that no longer exists. Increase letter spacing of intro description at 1000px width

--- a/css/screen.css
+++ b/css/screen.css
@@ -468,10 +468,6 @@ article > ol {
     padding-right: 25%;
   }
 
-  #writing-title {
-    padding-left: 25%;
-  }
-
   #logo {
     display: block;
     position: absolute;
@@ -507,7 +503,7 @@ article > ol {
     margin-top: -100px;
     font-size: 60px; /* 16px/16 == 1em*/
     line-height: 70px;
-    letter-spacing: 2px; /* 4.194px/16 == 0.262em */
+    letter-spacing: 2.2px; /* 4.194px/16 == 0.262em */
   }
 
   #credits {
